# supreme

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.simple  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  SECURITY.md  final_cleanup.py  package-lock.json  package.json  pyproject.toml  setup.py  supreme-1.0.34.vsix  supreme-1.0.35.vsix  tsconfig.json  update_imports.py  update_imports_v2.py  update_remaining.py  update_variable_names.py  webpack.config.js
Formula/: supreme2l.rb
cli/: supreme-cli.js
docs/: AI_SECURITY.md  API.md  COST_MANAGEMENT.md  DEPENDENCIES.md  IDE_INTEGRATION.md  INSTALLATION.md  QUICKSTART.md  ROADMAP.md  SCANNERS.md  TROUBLESHOOTING.md  technical-specification.html
docs/docker/: DOCKER-COMPOSE-SETUP.md  DOCKER-QUICK-START.md  DOCKER.md  Dockerfile  Dockerfile.simple  Makefile  docker-compose.yml  docker-setup.sh
docs/guides/: README.md  handling-false-positives.md  ide-integration.md  quick-start.md
docs/scanners/: ADDING_NEW_LINTERS.md  README.md
examples/: README.md  github-action.yml  gitlab-ci.yml  pre-commit-config.yaml  supreme2l.example.yml
resources/: webview.html
src/: codeLensProvider.ts  config.ts  diagnostics.ts  extension.ts  report.ts  sidebarProvider.ts  statusBar.ts  trivy.ts  types.d.ts  vulnerabilityTreeProvider.ts
src/services/: licenseService.ts
src/utils/: locator.ts
supreme2l/: __init__.py  __main__.py  cli.py  config.py  dependencies.json  setup_path.py
supreme2l/core/: __init__.py  fp_filter.py  parallel.py  pattern_analyzer.py  reporter.py  system.py
supreme2l/ide/: __init__.py  backup.py  claude_code.py
supreme2l/platform/: __init__.py  detector.py  install_manifest.py  tool_cache.py  version_manager.py
supreme2l/rules/: __init__.py
supreme2l/scanners/: __init__.py  a2a_scanner.py  agent_memory_scanner.py  agent_planning_scanner.py  agent_reflection_scanner.py  ai_context_scanner.py  ansible_scanner.py  base.py  bash_scanner.py  bat_scanner.py  clojure_scanner.py  cmake_scanner.py  cpp_scanner.py  css_scanner.py  dart_scanner.py  docker_compose_scanner.py  docker_mcp_scanner.py  docker_scanner.py  elixir_scanner.py  env_scanner.py  excessive_agency_scanner.py  garak_scanner.py  gitleaks_scanner.py  go_scanner.py  graphql_scanner.py  groovy_scanner.py  haskell_scanner.py  html_scanner.py  hyperparameter_scanner.py  java_scanner.py  javascript_scanner.py  json_scanner.py  kotlin_scanner.py  kubernetes_scanner.py  llm_guard_scanner.py  (+41 more)
test_pkg/: package-lock.json  package.json
test_scan_output/: scan_history.json  supreme2l-scan-20260213-184732.json
tests/: test_basic.py  test_mcp_scanner.py
vscode-extension/: .vscodeignore  package-lock.json  package.json  supreme2l-1.0.0.vsix  supreme2l-1.0.1.vsix  supreme2l-1.0.10.vsix  supreme2l-1.0.2.vsix  supreme2l-1.0.3.vsix  supreme2l-1.0.4.vsix  supreme2l-1.0.5.vsix  supreme2l-1.0.6.vsix  supreme2l-1.0.7.vsix  supreme2l-1.0.8.vsix  supreme2l-1.0.9.vsix  tsconfig.json  webpack.config.js
(+61 files in other folders)
