[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supreme2l"
version = "1.0.9"
description = "Supreme 2 Light - AI-first security scanner with 74 analyzers, intelligent false positive reduction, and 180+ AI agent security rules"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Silence AI", email = "support@silenceai.net"}
]
maintainers = [
    {name = "Silence AI", email = "support@silenceai.net"}
]
keywords = [
    "security",
    "scanner",
    "sast",
    "ai-security",
    "llm-security",
    "mcp",
    "agent-security",
    "prompt-injection",
    "false-positive-reduction",
    "rag-security",
    "cybersecurity",
    "devsecops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "bandit>=1.9.0",
    "yamllint>=1.28.0",
    "tqdm>=4.60.0",
    "requests>=2.28.0",
    "urllib3>=2.6.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    "defusedxml>=0.7.0",
    "tomli-w>=1.0.0",
    "toml>=0.10.2",
    "Blinter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.urls]
Homepage = "https://silenceai.net"
Documentation = "https://github.com/Zeinullahh/Supreme-2-light"
Repository = "https://github.com/Zeinullahh/Supreme-2-light"
"Bug Tracker" = "https://github.com/Zeinullahh/Supreme-2-light/issues"

[project.scripts]
s2l = "supreme2l.cli:main"

[tool.setuptools]
packages = ["supreme2l", "supreme2l.core", "supreme2l.scanners", "supreme2l.platform", "supreme2l.platform.installers", "supreme2l.ide"]

[tool.setuptools.package-data]
supreme2l = [
    "tool-versions.lock",
    "platform/installers/windows_scripts/*.json",
    "platform/installers/windows_scripts/*.ps1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=supreme2l --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "2025.9.1.0"

[tool.mypy]
python_version = "2025.9.1.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
